[gd_scene load_steps=9 format=2]

[ext_resource path="res://enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/abilities/frozen-sheet.png" type="Texture" id=2]
[ext_resource path="res://assets/gui/enemy_hp_progress_under.png" type="Texture" id=3]
[ext_resource path="res://assets/gui/enemy_hp_progress.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": false,
"name": "default",
"speed": 2.0
} ]

[node name="Enemy" type="KinematicBody2D" groups=[
"Announceable",
"Enemy",
]]
collision_layer = 2
collision_mask = 4
motion/sync_to_physics = true
script = ExtResource( 1 )

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_right = 16.0
margin_bottom = 5.0
mouse_filter = 2
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="WeaponArea" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponArea"]

[node name="Tween" type="Tween" parent="."]

[node name="FrozenSprite" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 4 )

[connection signal="area_entered" from="WeaponArea" to="." method="_on_WeaponArea_area_entered"]
